--- a/Picnic/Info.plist
+++ b/Picnic/Info.plist
@@ -2,10 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>To use map features</string>
+	<key>BGTaskSchedulerPermittedIdentifiers</key>
+	<array>
+		<string>refresh</string>
+	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>CFBundleDisplayName</key>
+	<string>Picnic</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -22,6 +26,20 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>For posting</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>To use map features</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>To use map features</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>To use map features</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>For posting</string>
+	<key>NSSupportsSuddenTermination</key>
+	<false/>
+	<key>UIApplicationExitsOnSuspend</key>
+	<false/>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
@@ -39,6 +57,11 @@
 			</array>
 		</dict>
 	</dict>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>location</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -51,16 +74,6 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>NSCameraUsageDescription</key>
-	<string>For posting</string>
-	<key>CFBundleDisplayName</key>
-	<string>Picnic</string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>To use map features</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>To use map features</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>For posting</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
